# FolkPerformingArtsDigitalArchive-Web

./: .env.example  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: implementation.md
.github/workflows/: test.yml
app/: __init__.py  main.py
data/: README.md  map_categories.json  places.json  search_index.json
data/by_region/: 岩手県_大船渡市.json  岩手県_宮古市.json  岩手県_平泉町.json  岩手県_盛岡市.json  岩手県_花巻市.json  岩手県_西和賀町.json  岩手県_遠野市.json
scripts/: build_by_region.py  build_search_index.py
specifications/: README.md  development-with-agents.md  specifications.md
specifications/agents/: README.md  agent-automation-ci.md  agent-backend-tests.md  agent-data-build.md  agent-frontend-static.md
specifications/features/: admin-operations.md  archive-player-and-sync.md  crowdsourcing-and-publish.md  google-maps.md  home-and-overview-map.md  list-and-discovery.md  map-and-geojson-contribution.md  optional-rich-media.md  performance-detail.md
static/: contribute_geo.css  contribute_geo.js  detail.css  detail.js  index.css  index.js  map.css  map.js  search.css  search.js
templates/: contribute_geo.html  detail.html  index.html  map.html  search.html
tests/: test_build_by_region.py  test_build_search_index.py  test_places_api.py
